# invent

./: .gitignore  FunctionaltyDescription.md  README.md  Toolchain.md
molecule-visualization-example/: README.md  index.html  package-lock.json  package.json  vite.config.js
molecule-visualization-example/src/: general.js  main.js  parameters.js
pre-project/Girts-sandbox/clean-affinity/: CMakeLists.txt  README.md
pre-project/Girts-sandbox/clean-affinity/include/: compact.hpp  fastaffinity.hpp  lattice.hpp  proteins.hpp  residue.hpp
pre-project/Girts-sandbox/clean-affinity/src/: catch2.cpp  compact.cpp  fastaffinity.cpp  lattice.cpp  long_main.cpp  proteins.cpp  run_catch2_tests.cpp  run_tests.cpp
pre-project/Girts-sandbox/cmake-unit-tests/: CMakeLists.txt
pre-project/Girts-sandbox/unit-tests/: Makefile  README.md
pre-project/noGL/AbsolutNoLibVC/: AbsolutNoLibVC.sln  AbsolutNoLibVC.vcxproj  antigenLib.cpp  antigenLib.h  delimain.cpp  discretize.cpp  discretize.h  dlab.cpp  epitope.cpp  epitope.h  fileformats.h  html.cpp  importrepertoire.cpp  motifFeatures.cpp  motifFeatures.h  poolstructs.cpp  poolstructs.h  quality.cpp  selfEvo.cpp  selfEvo.h  topology.cpp  topology.h
pre-project/noGL/ToolsNoGl/: ToolNoGl.h  ToolsNoGl.cpp  ToolsNoGl.h  ToolsNoGl.vcxproj  ToolsNoGl.vcxproj.filters  md5.cpp  nucleotides.cpp  nucleotides.h  stopwatch.cpp  zaprandom.cpp
profiler-example/: CMakeLists.txt  README.md
profiler-example/src/: long_main.cpp
unit-test-example/: .gitignore  CMakeLists.txt  README.md
unit-test-example/include/: compact.h  cppunit.h  fastaffinity.h  lattice.h  pose.h  proteins.h  residue.h
unit-test-example/src/: catch2.cpp  compact.cpp  lattice.cpp  proteins.cpp  run_catch2_tests.cpp  run_cppunit_tests.cpp
(+51 files in other folders)
